Práctica 2 - Versión final

--- a/NetBeansProjects/Tarea 2/src/main/resources/static/Index.html
+++ b/NetBeansProjects/Tarea 2/src/main/resources/static/Index.html
@@ -12,15 +12,11 @@
     <body>
         <header>
             <nav>
-                <a href="#">Inicio</a>>
-                <a href="#">Acerca de</a>>
-                <a href="#">Portafolio</a>>
-                <a href="#">Servicios</a>>
-                <a href="#">Contacto</a>>
+                <a href="Index.html">Inicio</a>>
+                <a href="video.html">Video</a>>
             </nav>>
             <section class="textos-header">
                 <h1>Conozcamos Costa Rica</h1>
-                <h2>Lugares por conocer en el GAM</h2>
             </section>
             <div class="wave" style="height: 150px; overflow: hidden;"> <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height:100%; width:100%;"><path d="M0.00,49.98 C150.00,150.00 349.20, -50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
         </header>
@@ -34,28 +30,57 @@
                 </div>
             </section>
             <section class="portafolio">
-                
                 <div class="contenedor">
-                    <h2 class="titulo">Ciudades</h2>
-                    </div>
+                    <h2 class="titulo">Provincias</h2>
+                    <div class="galeria-port">
                      <div class="imagen-port">
-                         <img src="Imagenes/Alajuela-Costa-Rica.jpg" alt="" width='250'/>
+                          <a title="Alajuela" href="Alajuela.html"><img src="Imagenes/Alajuela-Costa-Rica.jpg" alt="Alajuela" width='240'/></a>
                         <div class="hover-galeria">
                             <p>Alajuela</p>
                         </div>
                     </div>
                      <div class="imagen-port">
-                         <img src="Imagenes/San jose.jpg" alt="" width='250'/>
+                         <a title="San Jose" href="San Jose.html"><img src="Imagenes/San jose.jpg" alt="San Jose" width='250'/></a>
                         <div class="hover-galeria">
                             <p>San José</p>
                         </div>
                     </div>
                      <div class="imagen-port">
-                         <img src="Imagenes/cartago.jpg" alt="" width='250'/>
+                         <a title="Cartago" href="Cartago.html"><img src="Imagenes/cartago.jpg" alt="Cartago" width='255'/></a>
                         <div class="hover-galeria">
                             <p>Cartago</p>
                         </div>
                     </div>
+                    <div class="imagen-port">
+                          <a title="Heredia" href="Heredia.html">
+                              <img src="Imagenes/Heredia2.jpg" alt="Heredia" width='270'/></a>
+                        <div class="hover-galeria">
+                            <p>Heredia</p>
+                        </div>
+                    </div>
+                    <div class="imagen-port">
+                          <a title="Guanacaste" href="Guanacaste.html">
+                              <img src="Imagenes/Guanacaste1.jpg" alt="Guanacaste" width='260'/></a>
+                        <div class="hover-galeria">
+                            <p>Guanacaste</p>
+                        </div>
+                    </div> 
+                <div class="imagen-port">
+                          <a title="Puntarenas" href="Puntarenas.html">
+                              <img src="Imagenes/puntarenas.jpg" alt="Puntarenas" width='260'/></a>
+                        <div class="hover-galeria">
+                            <p>Puntarenas</p>
+                        </div>
+                    </div>
+                    </div> 
+                <div class="imagen-port">
+                          <a title="Limon" href="Limon.html">
+                              <img src="Imagenes/limon2.jpg" alt="Limon" width='260'/></a>
+                        <div class="hover-galeria">
+                            <p>Limon</p>
+                        </div>
+                    </div>
+                   </div>
                
                 </section>
                    <section class="clientes contenedor">
@@ -83,18 +108,18 @@
                     <div class="servicio-cont">
                         <div class="servicio-ind">
                             <img src="Imagenes/restaurante.png" alt="" width='75'/>
-                            <h3>Name</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit taciti postra, sociis neque etiam suspendisse ridiculus nullam.</p>  
+                            <h3>Restaurantes</h3>
+                            <p>Opciones de restaurantes con comidas deliciosas tipicas de todo el país</p>  
                         </div>
                         <div class="servicio-ind">
                             <img src="Imagenes/turismo.png" alt="" width='75'/>
-                            <h3>Name</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit taciti postra, sociis neque etiam suspendisse ridiculus nullam.</p>  
+                            <h3>Tours</h3>
+                            <p>Diferentes aventuras por hacer en lo largo y ancho del país</p>  
                         </div>
                         <div class="servicio-ind">
                             <img src="Imagenes/Hospedaje.png" alt="" width='75'/>
-                            <h3>Name</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit taciti postra, sociis neque etiam suspendisse ridiculus nullam.</p>  
+                            <h3>Hospedajes</h3>
+                            <p>Recomendaciones de lugares seguros y comodos para los diferentes presupuestos</p>  
                         </div>
                     </div> 
                 </div>
