--- a/NetBeansProjects/Tarea 2/src/main/resources/static/Index.html
+++ b/NetBeansProjects/Tarea 2/src/main/resources/static/Index.html
@@ -133,11 +133,11 @@
                 </div>
                 <div class="content-foo">
                     <h4>Email</h4>
-                    <p>8814-9658</p>
+                    <p>tarea2@gmail.com</p>
                 </div>
                 <div class="content-foo">
                     <h4>Location</h4>
-                    <p>8814-9658</p>
+                    <p>San José, Costa Rica</p>
                 </div> 
             </div>
             <h2 class="titulo-final">&copy; Naya Desing</h2>
